# Learning

./: README.md
function-tooling/: .coveragerc  .gitignore  Jenkinsfile  README.md  noxfile.py  pyproject.toml  run.sh
function-tooling/src/tooling/buildapprovemerge/: lambda_function.py
function-tooling/src/tooling/buildapprovemerge/tests/unit/: test_lambda_function.py
function-tooling/src/tooling/checkbuildstatus/: build_status_service.py  lambda_function.py
function-tooling/src/tooling/checkbuildstatus/tests/unit/: test_build_status_service.py  test_lambda_function.py
function-tooling/src/tooling/common/: common_input_validation.py  git_service.py  gitlab_service.py  slack_service.py
function-tooling/src/tooling/common/error/: error_response_mapper.py
function-tooling/src/tooling/common/tests/unit/: test_common_input_validation.py  test_git_service.py  test_gitlab_service.py
function-tooling/src/tooling/createvulnerabilityreport/: check_aws_access.py  create_kube_config.py  lambda_function.py  send_slack_notification.py
function-tooling/src/tooling/generateserviceversionspage/: lambda_function.py
function-tooling/src/tooling/generateserviceversionspage/tests/unit/: test_lambda_function.py
function-tooling/src/tooling/setversion/: lambda_function.py  pom_update_service.py  set_version_service.py
function-tooling/src/tooling/setversion/tests/unit/: test_error_response_mapper.py  test_lambda_function.py  (+2 more)
function-tooling/src/tooling/updatedependencies/: lambda_function.py  nexus_service.py  update_project_dependencies_service.py
(+23 files in other folders)
